# LexiFlow

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  tauri.md  vercel.json
backend/: Cargo.toml  Secrets.toml.example  Shuttle.toml  diesel.toml
backend/migrations/: 001_initial.sql  002_fix_words_schema.sql  003_fix_id_type.sql  004_create_users_table.sql  005_create_conversation_tables.sql
backend/migrations/2024-01-01-000001_create_words/: down.sql  up.sql
backend/migrations/2024-01-01-000002_create_categories/: up.sql
backend/migrations/2024-01-01-000003_create_learning_activities/: down.sql  up.sql
backend/src/: database.rs  handlers.rs  lib.rs  main.rs
backend/src/auth_middleware/: auth.rs
backend/src/config/: mod.rs
backend/src/database/: connection.rs  schema.rs
backend/src/errors/: mod.rs
backend/src/handlers/: ai_handler.rs  auth_handler.rs  conversation_handler.rs  mod.rs  statistics.rs  word_handler.rs  words.rs
backend/src/middleware/: mod.rs
backend/src/models/: activity.rs  app_state.rs  conversation.rs  mod.rs  user.rs  word.rs
backend/src/services/: mod.rs
backend/src/utils/: validation.rs
frontend/: README.md  auth.config.ts  auth.ts  middleware.ts  next.config.js  next.config.ts  package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma
frontend/scripts/: create-demo-user.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/quiz/: page.tsx  quiz-client.tsx
frontend/src/app/record/: loading.tsx  page.tsx
frontend/src/app/test/: api-test-client.tsx  page.tsx
frontend/src/app/words/: page.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: actions.ts  api.ts  auth-headers.ts  cache.ts  getWords.ts  validations.ts
frontend/src/lib/auth/: auth-api.ts  (+6 more)
frontend/src/types/: forms.ts  index.ts  word.ts
prisma/: schema.prisma
src/app/: globals.css
src/app/conversation/: page.tsx
src/components/conversation/: swipeable-card.tsx  vocabulary-suggestion-cards.tsx
src/constants/: index.ts
src/types/: speech.d.ts
web-apps/frontend/: auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web-apps/frontend/prisma/: schema.prisma
web-apps/frontend/scripts/: create-demo-user.js
(+55 files in other folders)
