[package]
name = "lexiflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.55"
shuttle-runtime = "0.55"
shuttle-shared-db = { version = "0.55", features = ["postgres"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
argon2 = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
deadpool-diesel = { version = "0.5", features = ["postgres"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }