[package]
name = "lexiflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
# shuttle-secrets = { version= "0.42.0"}
tokio = "1.28.2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
