[package]
name = "lexiflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum = "0.7.5"  # shuttle-axumと競合するためコメントアウト
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres"], default-features = false }
tokio = "1.28.2"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate", "macros", "uuid"], default-features = false }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.0"
anyhow = "1.0"
